@startuml erd_diagram
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam shadowing false
skinparam linetype ortho

title Entity Relationship Diagram (ERD)
title Sistem Prediksi Penyebaran DBD - RSUD Lubuk Basung

entity "users" as users {
    * id : INT <<PK>>
    --
    username : VARCHAR(50) <<UNIQUE>>
    password : VARCHAR(255)
    nama_lengkap : VARCHAR(100)
    email : VARCHAR(100)
    role : ENUM(admin,petugas)
}

entity "pasien_dbd" as pasien {
    * id : INT <<PK>>
    --
    no_rm : VARCHAR(20) <<UNIQUE>>
    nama_pasien : VARCHAR(100)
    usia : INT
    jenis_kelamin : ENUM
    tanggal_masuk : DATE
    tanggal_keluar : DATE
    lama_rawat : INT
    bulan : VARCHAR(20)
    tahun : INT
    status_pasien : ENUM
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "log_aktivitas" as log {
    * id : INT <<PK>>
    --
    * user_id : INT <<FK>>
    aksi : VARCHAR(100)
    deskripsi : TEXT
    ip_address : VARCHAR(45)
    created_at : TIMESTAMP
}

entity "hasil_prediksi" as prediksi {
    * id : INT <<PK>>
    --
    bulan_prediksi : VARCHAR(20)
    tingkat_risiko : ENUM
    * created_by : INT <<FK>>
    created_at : TIMESTAMP
}

entity "kasus_bulanan" as kasus {
    * id : INT <<PK>>
    --
    bulan : VARCHAR(20)
    jumlah_kasus : INT
    tingkat_risiko : ENUM
}

users ||--o{ log
users ||--o{ prediksi

@enduml
